<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainLayout"
    tools:context="pl.pjatk.kn_miniprojekt1.EditActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:onClick="update"
        android:text="@string/save" />

    <TextView
        android:id="@+id/name_edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/name_edit_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/price_edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit_tv"
        android:layout_alignEnd="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:text="@string/price_edit_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/amount_edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/amount_edit_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>
