<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainLayout"
    tools:context="pl.pjatk.kn_miniprojekt1.OptionsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:onClick="saveOptions"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:text="@string/switch_theme"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:text="@string/change_title"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp" />


</RelativeLayout>
