<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainLayout"
    tools:context="pl.pjatk.kn_miniprojekt1.AddActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="329dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="105dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:text="@string/name_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/price"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_alignEnd="@+id/price"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_tv"
        android:layout_alignBottom="@+id/price"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="9dp"
        android:text="@string/price_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="342dp"
        android:text="@string/amount_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

</RelativeLayout>
